fix dashboard greeting message not to overlap dashboard content by using 2nd navbar

--- a/public/css/mep.css
+++ b/public/css/mep.css
@@ -5,6 +5,10 @@
   box-sizing: border-box;
 }
 
+.second-navbar{
+  top:50px;
+}
+
 #su_nav_bar {
   overflow-x: hidden;
   background-color: #20B2AA;
@@ -14,13 +18,6 @@
 #su_nav_bar a {
   overflow-x: hidden;
   color: white;
-}
-
-.su_dashboard_greeting {
-  position: fixed;
-  opacity:1.0;
-  top: 60px;
-  z-index: 999;
 }
 
 .wrapper {
